--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# keys and personal settings
+/scr/config.js
+.eslintrc.json
+.prettierrc.json
+
 # dependencies
 /node_modules
 /.pnp
