--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # keys and personal settings
-/scr/config.js
+/src/config.js
 .eslintrc.json
 .prettierrc.json
 
